# ITQuest

./: .gitattributes  README.md
ITQuest/: CMakeLists.txt  addclass.cpp  addclass.h  addclass.ui  addlevel.cpp  addlevel.h  addlevel.ui  askquestion.cpp  askquestion.h  askquestion.ui  clienttcp.cpp  clienttcp.h  firstscreen.cpp  firstscreen.h  global_vars.cpp  global_vars.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  messageform.cpp  messageform.h  messageform.ui  playwidget.cpp  playwidget.h  playwidget.ui  resources.qrc  (+5 more)
ITQuest-server/: CMakeLists.txt  main.cpp  resources.qrc  server.cpp  server.h
ITQuest-server/docbook/: annotated.xml  class_server.xml  index.xml  main_8cpp.xml  server_8cpp.xml  server_8h.xml  server_8h_source.xml  structpupil_class.xml
ITQuest-server/html/: annotated.html  annotated_dup.js  class_server-members.html  class_server.html  class_server.js  classes.html  doxygen.css  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  globals_vars.html  hierarchy.html  hierarchy.js  index.html  main_8cpp.html  menudata.js  navtreedata.js  navtreeindex0.js  server_8cpp.html  server_8h.html  server_8h.js  server_8h_source.html  structpupil_class-members.html  structpupil_class.html  structpupil_class.js
ITQuest-server/html/search/: all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  enums_0.js  enumvalues_1.js  functions_2.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
(+3 files in other folders)
